--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,8 @@ stages:
     - apt-get update
     - apt-get -y upgrade
     - curl -O https://storage.googleapis.com/golang/go1.11.2.linux-amd64.tar.gz
-    - tar -xvf go1.11.2.linux-amd64.tar.gz
-    - mv go /usr/local
+    - tar -C /usr/local -xzf go1.11.2.linux-amd64.tar.gz
+    - export PATH=$PATH:/usr/local/go/bin
     - go version
 
 
