--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,8 @@ stages:
   script:
     - apt-get update
     - apt-get -y upgrade
+    - apt-get gcc -y
+    - apt-get build-essential -y
     - curl -O https://storage.googleapis.com/golang/go1.11.2.linux-amd64.tar.gz
     - tar -C /usr/local -xzf go1.11.2.linux-amd64.tar.gz
     - export PATH=$PATH:/usr/local/go/bin
