force pulsar client version with an hack

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,11 @@ before_install:
   - sudo apt install ./pulsar-client-cpp.deb ./pulsar-client-dev.deb
 
 script:
- - go test -v ./...
+  - go get -v -t ./...
+  # hack for counter the https://github.com/apache/pulsar/issues/4055
+  - git clone --branch v2.3.1 https://github.com/apache/pulsar.git
+  - sudo cp -r pulsar/pulsar-client-go/pulsar $GOPATH/pkg/mod/github.com/apache/pulsar/pulsar-client-go@v0.0.0-20190502042238-97bc7e07aedf/pulsar
+  - go test -v ./...
 
 after_success:
  - go test -cover ./...
